--- a/static/styles.css
+++ b/static/styles.css
@@ -552,6 +552,12 @@ a:hover {
   text-decoration: underline;
 }
 
+h1, h2 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+}
+
 .container {
   width: 100%;
 }
@@ -31351,13 +31357,12 @@ a:hover {
 
 /* Base styles */
 
-p {
+h1, h2 {
   padding-bottom: 1rem;
 }
 
-h1 {
-  font-weight: bolder;
-  padding: 1rem;
+p {
+  padding-bottom: 1rem;
 }
 
 @media (min-width: 640px) {
