--- a/layouts/_default/page.html.twig
+++ b/layouts/_default/page.html.twig
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {%~ include 'partials/metatags.html.twig' ~%}
-    {#
+    {%- if getenv('NODE_ENV') == 'production' ~%}
     <style>
-      {{- asset('/styles.css')|inline ~}}
+	    {{- asset('/styles.css')|inline ~}}
     </style>
-    #}
+    {%- else ~%}
     <link rel="stylesheet" href="{{ asset('/styles.css',{minify:false,fingerprint:false})|url }}" />
+    {%- endif ~%}
   </head>
   <body class="flex flex-col min-h-screen bg-saumon mx-5 md:mx-10">
     <header class="my-20 font-serif text-4xl md:text-7xl font-extrabold text-center text-gray-400 text-opacity-25">
