--- a/layouts/_default/page.html.twig
+++ b/layouts/_default/page.html.twig
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="{{ asset('/styles.css',{minify:false,fingerprint:false})|url }}" />
     {%- endif ~%}
   </head>
-  <body class="flex flex-col min-h-screen bg-saumon mx-5 md:mx-10">
-    <header class="my-20 font-serif text-4xl md:text-7xl font-extrabold text-center text-gray-400 text-opacity-25">
+  <body class="flex flex-col min-h-screen bg-saumon mx-5 md:mx-10 dark:bg-gray-800">
+    <header class="my-20 font-serif text-4xl md:text-7xl font-extrabold text-center text-gray-400 text-opacity-25 dark:text-saumon">
       {{~ site.title ~}}
     </header>
-    <main class="flex-grow text-gray-700 text-center font-light mx-auto max-w-screen-md">
+    <main class="flex-grow text-gray-700 dark:text-white text-center font-light mx-auto max-w-screen-md">
       {%- block content ~%}
       {{~ page.content ~}}
       {%- endblock ~%}
