--- a/layouts/_default/page.html.twig
+++ b/layouts/_default/page.html.twig
@@ -24,7 +24,7 @@
     </main>
     <footer>
       <div class="m-3 text-sm text-center justify-end text-gray-400 font-light">
-        studio cecillie – Studio technique et créatif –&nbsp;<a href="https://cecillie.fr">Cécile Ricordeau</a>&nbsp;&amp;&nbsp;<a href="https://arnaudligny.fr">Arnaud Ligny</a>&nbsp;– Montreuil –&nbsp;<a href="https://studio.cecillie.fr">studio.cecillie.fr</a>
+        studio cecillie – Studio technique et créatif –&nbsp;<a href="https://cecillie.fr">Cécile Ricordeau</a>&nbsp;&amp;&nbsp;<a href="https://arnaudligny.fr">Arnaud Ligny</a>&nbsp;– Montreuil
       <div>
     </footer>
   </body>
