--- a/layouts/_default/page.html.twig
+++ b/layouts/_default/page.html.twig
@@ -10,12 +10,12 @@
 	    {{- asset('styles.css')|inline ~}}
     </style>
     {%- else ~%}
-    <link rel="stylesheet" href="{{ asset('styles.css',{minify:false,fingerprint:false}) }}" />
+    <link rel="stylesheet" href="{{ asset('styles.css', {minify: false, fingerprint: false})|url }}" />
     {%- endif ~%}
   </head>
   <body class="flex flex-col min-h-screen bg-saumon mx-5 md:mx-10 dark:bg-gray-800">
     <header class="my-20 font-serif text-4xl md:text-7xl font-extrabold text-center text-gray-400 text-opacity-25 dark:text-saumon">
-      {{~ site.title ~}}
+      {{ site.title ~}}
     </header>
     <main class="flex-grow text-gray-700 dark:text-white text-center font-light mx-auto max-w-screen-md">
       {%- block content ~%}
