--- a/layouts/index.html.twig
+++ b/layouts/index.html.twig
@@ -2,7 +2,7 @@
 
 {%- block content ~%}
       <header>
-        <h1>{{ page.title }}</h1>
+        <h1>{{ page.header }}</h1>
       </header>
 {{~ page.content ~}}
 {%- endblock ~%}
